# GPU-NTT

./: .doxycfg  .gitignore  CMakeLists.txt  notes
gtest/: example.cpp  testsuite.cu
gtest/misc/: device.cu
gtest/modular/: barret.cu  goldilocks.cu  plantard.cu
gtest/nttparams/: bitreverse.cu
gtest/poly/: schoolbook.cpp
include/: common.cuh  helperutils.h  modular_arith.cuh
src/: common.cu  helperutils.cpp  modular_arith.cuh  ntt.cu  ntt.cuh  ntt_cpu.cu  ntt_cpu.cuh  nttparameters.cu  nttparameters.cuh
test/: ntt_cpu_test.cu  ntt_gpu_bench.cu  ntt_gpu_test.cu
